--- a/css/index.css
+++ b/css/index.css
@@ -136,6 +136,22 @@ body
    width: 100%;
    height: 100%;
 }
+#Nazvanietext2
+{
+
+   border: 0px #000000 solid;
+
+   padding: 0px 0px 0px 0px;
+
+   left: 0;
+
+   top: 0;
+
+   width: 100%;
+
+   height: 100%;
+
+}
 #Nazvanietext
 {
    border: 0px #000000 solid;
