--- a/css/index.css
+++ b/css/index.css
@@ -208,6 +208,15 @@ body
    width: 100%;
    height: 100%;
 }
+#Menu6
+{
+   border: 0px #000000 solid;
+   padding: 0px 0px 0px 0px;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
 #Planshet
 {
    border: 0px #000000 solid;
@@ -270,6 +279,15 @@ body
    height: 100%;
 }
 #StrelkaP2
+{
+   border: 0px #000000 solid;
+   padding: 0px 0px 0px 0px;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#StrelkaP5
 {
    border: 0px #000000 solid;
    padding: 0px 0px 0px 0px;
@@ -392,6 +410,215 @@ body
    font-size: 16px;
    padding: 4px 4px 4px 4px;
    text-align: center;
+   overflow: auto;
+   resize: none;
+}
+#TextArea7jQueryAccordion1
+{
+   width: 100%;
+   height: 100%;
+}
+#wb_TextArea7jQueryAccordion1 .ui-helper-reset
+{
+   line-height: normal !important;
+   font-size: 1em !important;
+}
+#TextArea7jQueryAccordion1 .ui-accordion-header
+{
+   font-family: Arial;
+   font-weight: bold;
+   font-size: 13px !important;
+   font-style: normal;
+   padding: 10px 10px 10px 10px;
+   text-align: left;
+}
+#TextArea7jQueryAccordion1 h3
+{
+   display: block;
+   margin: 0;
+}
+#TextArea7jQueryAccordion1 .ui-accordion-header .ui-icon
+{
+   background-image: url(../images/index-TextArea7jQueryAccordion1-default.png);
+   background-position: 0 0;
+   padding-right: 4px;
+}
+#TextArea7jQueryAccordion1 .ui-state-active .ui-icon
+{
+   background-image: url(../images/index-TextArea7jQueryAccordion1-active.png);
+}
+#TextArea7jQueryAccordion1 .ui-accordion-content
+{
+   padding: 0;
+   position: relative;
+}
+#TextArea7jQueryAccordion1, #TextArea7jQueryAccordion1 > .ui-corner-all, #TextArea7jQueryAccordion1 > .ui-corner-top
+{
+   -webkit-border-top-left-radius: 4px;
+   -moz-border-top-left-radius: 4px;
+   border-top-left-radius: 4px;
+   -webkit-border-top-right-radius: 4px;
+   -moz-border-top-right-radius: 4px;
+   border-top-right-radius: 4px;
+}
+#TextArea7jQueryAccordion1 .ui-corner-all, #TextArea7jQueryAccordion1 .ui-corner-bottom
+{
+   -webkit-border-bottom-right-radius: 4px;
+   -moz-border-bottom-right-radius: 4px;
+   border-bottom-right-radius: 4px;
+   -webkit-border-bottom-left-radius: 4px;
+   -moz-border-bottom-left-radius: 4px;
+   border-bottom-left-radius: 4px;
+}
+#TextArea7jQueryAccordion1 .ui-widget-content
+{
+   border-color: #808080;
+   background-color: #F2F5F7;
+   background-image: none;
+   color: #FFFFFF;
+}
+#TextArea7jQueryAccordion1 .ui-state-default
+{
+   border-color: #808080;
+   background-color: #A9A9A9;
+   background-image: none;
+   color: #4F4F4F;
+}
+#TextArea7jQueryAccordion1 .ui-state-hover
+{
+   border-color: #808080;
+   background-color: #A9A9A9;
+   background-image: none;
+   color: #4F4F4F;
+}
+#TextArea7jQueryAccordion1 .ui-state-active
+{
+   border-color: #808080;
+   background-color: #696969;
+   background-image: none;
+   color: #C0C0C0;
+}
+#StrelkaL6
+{
+   border: 0px #000000 solid;
+   padding: 0px 0px 0px 0px;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#KnigaRK
+{
+   border-width: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#KnigaOD
+{
+   border-width: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#KnigaKP
+{
+   border-width: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#KnigaMD
+{
+   border-width: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#KnigaAG
+{
+   border-width: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#TextAreaAG
+{
+   border: 1px transparent solid;
+   border-radius: 4px;
+   background-color: transparent;
+   background-image: none;
+   color :#404040;
+   font-family: Arial;
+   font-weight: normal;
+   font-size: 13px;
+   padding: 4px 4px 4px 4px;
+   text-align: left;
+   overflow: auto;
+   resize: none;
+}
+#TextAreaMD
+{
+   border: 1px transparent solid;
+   border-radius: 4px;
+   background-color: transparent;
+   background-image: none;
+   color :#404040;
+   font-family: Arial;
+   font-weight: normal;
+   font-size: 13px;
+   padding: 4px 4px 4px 4px;
+   text-align: left;
+   overflow: auto;
+   resize: none;
+}
+#TextAreaKP
+{
+   border: 1px transparent solid;
+   border-radius: 4px;
+   background-color: transparent;
+   background-image: none;
+   color :#404040;
+   font-family: Arial;
+   font-weight: normal;
+   font-size: 13px;
+   padding: 4px 4px 4px 4px;
+   text-align: left;
+   overflow: auto;
+   resize: none;
+}
+#TextAreaOD
+{
+   border: 1px transparent solid;
+   border-radius: 4px;
+   background-color: transparent;
+   background-image: none;
+   color :#404040;
+   font-family: Arial;
+   font-weight: normal;
+   font-size: 13px;
+   padding: 4px 4px 4px 4px;
+   text-align: left;
+   overflow: auto;
+   resize: none;
+}
+#TextAreaRK
+{
+   border: 1px transparent solid;
+   border-radius: 4px;
+   background-color: transparent;
+   background-image: none;
+   color :#404040;
+   font-family: Arial;
+   font-weight: normal;
+   font-size: 13px;
+   padding: 4px 4px 4px 4px;
+   text-align: left;
    overflow: auto;
    resize: none;
 }
